--- a/templates/page/home.html.twig
+++ b/templates/page/home.html.twig
@@ -5,17 +5,21 @@
 {% endblock %}
 
 {% block body %}
-	{% for post in posts %}
-		<div class="col-12 col-md-3">
-			<div class="card">
-				<div class="card-body">
-					<h5 class="card-title">{{post.title}}</h5>
-					<span>{{post.category.name}}
-					</span>
-					<span>{{post.comments|length}}</span>
-					<a class="btn btn-primary" href="{{path('app_post',{slug:post.slug})}}">See more</a>
+	<div class="row g-0 my-4">
+		{% for post in posts %}
+			<div class="col-12 col-md-4">
+				<div class="card home-card m-1">
+					<div class="card-body d-flex flex-column justify-content-between">
+						<h5 class="card-title">{{post.title}}</h5>
+						<div class="info-post">
+							<span>{{post.category.name}}
+							</span>
+							<span>{{post.comments|length}}</span>
+						</div>
+						<a class="btn btn-primary" href="{{path('app_post',{slug:post.slug})}}">See more</a>
+					</div>
 				</div>
 			</div>
-		</div>
-	{% endfor %}
+		{% endfor %}
+	</div>
 {% endblock %}
