--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,13 +19,16 @@
 	</head>
 	<body>
 		{% if app.user %}
+			<a href="{{path('app_home')}}">Home</a>
+			|
 			<strong>{{app.user.name}}</strong>
 			|
 			<a href="{{path('app_logout')}}">LogOut</a>
 		{% else %}
-			<a href="{{path('app_loging')}}">Login</a>|<a href="{{path('app_register')}}">Register</a>
+			<a href="{{path('app_login')}}">Login</a>|<a href="{{path('app_register')}}">Register</a>
 		{% endif %}
 
-		<div class="container"> {% block body %}{% endblock %}</div>
+		<div class="container"> {% block body %}{% endblock %}
+			</div>
 		</body>
 	</html>
