--- a/templates/page/post.html.twig
+++ b/templates/page/post.html.twig
@@ -5,34 +5,39 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container">
+	<div class="post single-post">
 		<div class="row">
-			<h1 class="display-1">{{post.title}}</h1>
+			<h1 class="display-1 p-0 my-4">{{post.title}}</h1>
 			{% if post.image %}
 				<img src="{{post.image}}" alt="{{post.title}}">
 			{% endif %}
-			<p>{{post.content}}</p>
-			<span>{{post.category.name}}</span>
+			<p class="mb-4 p-0">{{post.content}}</p>
+			<span class="border border-dark  py-1 px-3 rounded w-auto mb-4">{{post.category.name}}</span>
 		</div>
+		
 		<div class="row">
-			<div class="col-12">
-				{% if (post.comments|length) > 1 or (post.comments|length )== 0 %}
-					<span>{{post.comments|length}}
-						Comments</span>
-				{% else %}
-					<span>{{post.comments|length}}
-						Comment</span>
-				{% endif %}
-
-			</div>
 			<div class="col-12">
 				{{ include('page/_comment-form.html.twig') }}
 			</div>
 			<div class="col-12">
+				{% if (post.comments|length) > 1 or (post.comments|length )== 0 %}
+					<h5 class="my-4">{{post.comments|length}}
+						Comments</h5>
+				{% else %}
+					<h5 class="my-4">{{post.comments|length}}
+						Comment</h5>
+				{% endif %}
+			</div>
+			<div class="col-12">
 				{% for comment in post.comments %}
-					<span>{{comment.user.name}}</span>
-					<p>{{comment.content}}</p>
-					<hr>
+					<figure class="border border-dark  p-3 rounded">
+						<blockquote class="blockquote">
+							<p>{{comment.content}}</p>
+						</blockquote>
+						<figcaption class="blockquote-footer">
+							<cite title="Source Title">{{comment.user.name}}</cite>
+						</figcaption>
+					</figure>
 				{% endfor %}
 			</div>
 		</div>
